--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,11 @@
-name: Build and deploy
+name: Deploy
 
 on:
   workflow_dispatch:
 
 jobs:
-  build-artifact:
-    name: build-artifact
+  test-artifact:
+    name: test-artifact
     runs-on: ubuntu-latest
 
     steps:
@@ -31,7 +31,7 @@ jobs:
   deploy-artifact:
     name: deploy-artifact
     runs-on: ubuntu-latest
-    needs: build-artifact
+    needs: test-artifact
 
     steps:
       - name: Checkout
