--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <java.version>17</java.version>
         <hazelcast-spring.version>5.1.3</hazelcast-spring.version>
+        <stripe.version>22.10.0</stripe.version>
         <netty-macos.version>4.1.89.Final</netty-macos.version>
         <lombok.version>1.18.24</lombok.version>
 
@@ -52,6 +53,12 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-spring</artifactId>
             <version>${hazelcast-spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>${stripe.version}</version>
         </dependency>
 
         <dependency>
