fix: Docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,16 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-      args:
-        - APP_ENV=${APP_ENV}:dev
-        - APP_PORT=${APP_PORT}:8080
     container_name: save-my-petrol
     restart: always
     ports:
-      - ${APP_PORT}:8080
+      - "8080:8080"
     environment:
-      APP_ENV: ${APP_ENV}:dev
-      APP_PORT: ${APP_PORT}:8080
-      MONGO_DB_PORT: ${MONGO_DB_PORT}
-      MONGO_ROOT_USER: ${MONGO_ROOT_USER}
-      MONGO_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      APP_BASE_URL: ${APP_BASE_URL}
+      MONGO_DB_URI: ${MONGO_DB_URI}
       MONGO_DATABASE: ${MONGO_DATABASE}
+      STRIPE_API_KEY: ${STRIPE_API_KEY}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
     depends_on:
       - mongodb
     networks:
@@ -29,32 +25,13 @@ services:
     image: mongo:4.4
     container_name: mongo
     ports:
-      - ${MONGO_DB_PORT}:27017
+      - "27017:27017"
     volumes:
       - save-my-petrol-backend-db:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
-    networks:
-      - save-my-petrol-backend
-
-  mongo-express:
-    image: mongo-express:latest
-    container_name: mongo_express
-    restart: always
-    ports:
-      - ${MONGO_EXPRESS_PORT}:8081
-    depends_on:
-      - mongodb
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_PORT=27017
-      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
-      - ME_CONFIG_MONGODB_AUTH_USERNAME=${MONGO_ROOT_USER}
-      - ME_CONFIG_MONGODB_AUTH_PASSWORD=${MONGO_ROOT_PASSWORD}
-      - ME_CONFIG_BASICAUTH_USERNAME=root
-      - ME_CONFIG_BASICAUTH_PASSWORD=root
     networks:
       - save-my-petrol-backend
 
