--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,20 @@ jobs:
     needs: test-artifact
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Deploy to railway
-        uses: bervProject/railway-deploy@main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          railway_token: ${{ secrets.RAILWAY_TOKEN }}
-          service: "save-my-petrol"
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: adrianlzgi/save-my-petrol:backend
